// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerDeleteAccount shallow renders correctly 1`] = `
<FormDeleteAccount
  currentFormBool={false}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "deleteAccountConfirm": Object {
        "errorMessage": "",
        "id": "deleteAccountConfirm",
        "parentId": "deleteAccountForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerDeleteAccount shallow renders correctly and calls handleInputChange, with invalid delete account 1`] = `
<FormDeleteAccount
  currentFormBool={false}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "deleteAccountConfirm": Object {
        "errorMessage": "Please type \\"delete\\" to confirm you would like to delete your account",
        "id": "deleteAccountConfirm",
        "parentId": "deleteAccountForm",
        "value": "del",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerDeleteAccount shallow renders correctly and calls handleInputChange, with undefined error 1`] = `
<FormDeleteAccount
  currentFormBool={false}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "deleteAccountConfirm": Object {
        "errorMessage": "Please try your request again. If unsuccessful on subsequent attempts, please contact customer service.",
        "id": "deleteAccountConfirm",
        "parentId": "deleteAccountForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerDeleteAccount shallow renders correctly, with componentWillUpdate, componentDidUpdate, and componentWillUnmount 1`] = `
<FormDeleteAccount
  currentFormBool={false}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "deleteAccountConfirm": Object {
        "errorMessage": "",
        "id": "deleteAccountConfirm",
        "parentId": "deleteAccountForm",
        "value": "delete",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerDeleteAccount shallow renders correctly, with loading indicator 1`] = `
<FlexColumn
  alignItems={null}
  alignSelf={null}
  borderColorType="border"
  borderRadius={null}
  borderStyle={null}
  borderWidth={null}
  boxSizing={null}
  color={Object {}}
  display={null}
  flex={null}
  flexWrap={null}
  height="0px"
  justifyContent={null}
  margin={null}
  mediaWidth={null}
  minHeight={null}
  minWidth={null}
  overflowX={null}
  overflowY={null}
  padding={null}
  position={null}
  responsiveAlignSecurities={null}
  responsiveJustifyContent={null}
  responsiveMargin={null}
  responsivePadding={null}
  responsivePosition={null}
  responsiveWidth={null}
  separator={false}
  themeColor="primary"
  width="100%"
>
  <BeatLoader
    color="#7367e6"
    loading={true}
    margin="2px"
    size="15px"
  />
</FlexColumn>
`;
